# Ai_metatrader5

trading_bot/: GO.sh  compile.sh  configure.sh  julia.sh  mt5debian.sh  npm.sh  pyproject.toml  requirements.txt  setup.sh
trading_bot/data/: historical_data.csv  new_market_data.csv  trade_suggestions.csv
trading_bot/mq4/: advisor.mq4  compile.sh  data_parser.mq4  trainer.mq4
trading_bot/scripts/: ai_advisor_model.py  ai_parser_model.py  ai_training_model.go  ai_training_model.jl  ai_training_model.js  auto_trade.py  auto_trade_with_patterns.py  continuous_scraping.py  data_fetching.py  detection.py  fetch_2_hours_data.py  finalsetup.sh  generate_training_data.py  main.py  mq4_integration_model.py  pattern_recognition.py  strategy_scraping.py  symbol_fetching.py  trading_strategies.py  train_model.py  train_model_with_realtime_data.py
trading_bot/src/: indicators.cpp  indicators.h  trade_execution.cpp  trade_execution.h
